--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "author": "",
   "scripts": {
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/main/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,11 +19,8 @@
   },
   "homepage": "https://github.com/Matheus002/api-wevo#readme",
   "devDependencies": {
-    "@types/node": "^16.10.4",
-    "typescript": "^4.4.4"
-  },
-  "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^16.10.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "eslint": "^7.32.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
@@ -30,6 +28,13 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "express": "^4.17.1"
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.38"
   }
 }
