--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/main/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
