feat: add tyorm and repositories

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,6 +5,7 @@
   "username": "docker",
   "passwword": "wevo",
   "database": "test",
+  "migrations": ["./src/db/migrations/*.ts"],
   "cli": {
     "migrationsDir": "./src/db/migrations"
   }
